--- a/fmsb/fmsb_site/templates/base.html
+++ b/fmsb/fmsb_site/templates/base.html
@@ -1,17 +1,40 @@
 {% load cms_tags staticfiles sekizai_tags menu_tags %}
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>{% block title %}This is my new project home page{% endblock title %}</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css">
-        {% render_block "css" %}
-    </head>
-    <body>
-        {% cms_toolbar %}
-        <div class="container">
-            <div class="navbar navbar-default" role="navigation">
+<!DOCTYPE html>
+<html lang="{{ LANGUAGE_CODE }}">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="{% page_attribute 'meta_description' %}">
+    <meta name="author" content="">
+    <title>{% block title %}This is my new project home page{% endblock title %}</title>
+
+	<!-- core CSS -->
+    <link href="{% static  "css/bootstrap.min.css" %}" rel="stylesheet">
+    <link href="{% static  "css/font-awesome.min.css" %}" rel="stylesheet">
+    <link href="{% static  "css/animate.min.css"  %}" rel="stylesheet">
+    <link href="{% static  "css/prettyPhoto.css" %}" rel="stylesheet">
+    <link href="{% static  "css/main.css" %}" rel="stylesheet">
+    <link href="{% static  "css/responsive.css" %}" rel="stylesheet">
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->
+
+    <link rel="apple-touch-icon" sizes="144x144" href="{% static  "images/ico/apple-touch-icon.png" %}">
+    <link rel="icon" type="image/png" href="{% static  "images/ico/favicon-32x32.png" %}" sizes="32x32">
+    <link rel="icon" type="image/png" href="{% static  "images/ico/favicon-16x16.png" %}" sizes="16x16">
+    <link rel="manifest" href="{% static  "images/ico/manifest.json" %}">
+    <link rel="mask-icon" href="{% static  "images/ico/safari-pinned-tab.svg" %}" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
+    {% render_block "css" %}
+</head><!--/head-->
+
+<body class="homepage">
+{% cms_toolbar %}
+
+    <header id="header">
+        <nav class="navbar navbar-inverse" role="banner">
+            <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
@@ -19,18 +42,44 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Project name</a>
+                    <a class="navbar-brand" href="index.html"><img src="{% static "images/logo.png" %}" alt="logo"></a>
                 </div>
-                <div class="navbar-collapse collapse">
+
+                <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         {% show_menu 0 1 100 100 "menu.html" %}
                     </ul>
                 </div>
+            </div><!--/.container-->
+        </nav><!--/nav-->
+
+    </header><!--/header-->
+
+{% block content %}{% endblock content %}
+
+
+    <footer id="footer" class="midnight-blue">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                            {%  static_placeholder "Footer" %}
+                </div>
+                <div class="col-sm-6">
+                    <ul class="pull-right">
+                        {% show_menu 0 1 100 100 "menu.html" %}
+                    </ul>
+                </div>
             </div>
-            {% block content %}{% endblock content %}
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
-        {% render_block "js" %}
-    </body>
+    </footer><!--/#footer-->
+
+    <script src="{% static "js/jquery.js" %}"></script>
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/jquery.prettyPhoto.js" %}"></script>
+    <script src="{% static "js/jquery.isotope.min.js" %}"></script>
+    <script src="{% static "js/main.js" %}"></script>
+    <script src="{% static "js/wow.min.js" %}"></script>
+    {% render_block "js" %}
+</body>
 </html>
