--- a/fmsb/fmsb_site/static/css/main.css
+++ b/fmsb/fmsb_site/static/css/main.css
@@ -23,24 +23,26 @@ h6 {
   color:#4e4e4e;
 }
 
+/* http://stackoverflow.com/questions/15649244/responsive-font-size */
 h1{
-  font-size: 36px;
+  font-size: 4.0vw;
   color:#fff;
 }
 
 h2{
-  font-size: 20px;
+   font-size: 3.0vw;
 }
 
 h3{
-  font-size: 16px;
-  color: #787878;
+  /*font-size: 16px;*/
+  font-size: 2.0vw;
+  color: #FFFFFF;
   font-weight: 400;
   line-height: 24px;
 }
 
 h4{
-  font-size: 16px;
+  font-size: 2.0vw;
 }
 
 a {
