--- a/fmsb/fmsb_site/templates/base.html
+++ b/fmsb/fmsb_site/templates/base.html
@@ -14,6 +14,7 @@
     <link href="{% static  "css/animate.min.css"  %}" rel="stylesheet">
     <link href="{% static  "css/prettyPhoto.css" %}" rel="stylesheet">
     <link href="{% static  "css/main.css" %}" rel="stylesheet">
+    <link href="{% static  "css/fmsb.css" %}" rel="stylesheet">
     <link href="{% static  "css/responsive.css" %}" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
