--- a/fmsb/fmsb_site/static/css/fmsb.css
+++ b/fmsb/fmsb_site/static/css/fmsb.css
@@ -9,6 +9,17 @@
   line-height: normal;
 }
 
+
+.fmsb-carousel h2  {
+  font-size: 3.5vw;
+}
+
+.fmsb-carousel h3  {
+  font-size: 2.5vw;
+  line-height: 1.3;
+}
+
+
 .fmsb-carousel .btn {
   font-size: 2.0vw;
   float: left !important;
@@ -17,6 +28,24 @@
 
 .fmsb-carousel img {
   width: 100%;
+}
+
+
+.fmsb-carousel .item.active .carousel-content{
+  opacity: 1;
+  -webkit-transition: opacity ease-in-out 500ms;
+  -moz-transition: opacity ease-in-out 500ms;
+  -o-transition: opacity ease-in-out 500ms;
+  transition: opacity ease-in-out 500ms;
+  z-index: 2;
+}
+
+.fmsb-carousel .item .carousel-content{
+  opacity: 0;
+  -webkit-transition: opacity ease-in-out 500ms;
+  -moz-transition: opacity ease-in-out 500ms;
+  -o-transition: opacity ease-in-out 500ms;
+  transition: opacity ease-in-out 500ms;
 }
 
 .fmsb-carousel  .active .animation.animated-item-1 {
@@ -51,3 +80,85 @@
   animation: fadeInUp 300ms linear 1200ms both;
 }
 
+.fmsb-carousel  .left.carousel-control,
+.fmsb-carousel  .right.carousel-control {
+  position: absolute;
+  color: #fff;
+  display: inline-block;
+  z-index: 5;
+}
+
+
+
+
+.feature-wrap .icon{
+  font-size: 48px;
+  height: 110px;
+  width: 110px;
+  margin: 3px;
+  border-radius: 100%;
+  line-height: 110px;
+  text-align:center;
+  background: #ffffff;
+  color: #c52d2f;
+  border: 3px solid #ffffff;
+  box-shadow: inset 0 0 0 5px #f2f2f2;
+  -webkit-box-shadow: inset 0 0 0 5px #f2f2f2;
+  -webkit-transition: 500ms;
+  -moz-transition: 500ms;
+  -o-transition: 500ms;
+  transition: 500ms;
+  float: left;
+  margin-right: 25px;
+}
+
+.feature-wrap .icon:hover {
+  background: #c52d2f;
+  color: #fff;
+  box-shadow: inset 0 0 0 5px #c52d2f;
+  -webkit-box-shadow: inset 0 0 0 5px #c52d2f;
+  border: 3px solid #c52d2f;
+}
+
+.fmsb-services > h1,h2,h3 {
+  color:#4e4e4e;
+}
+
+.fmsb-services  h1 {
+  font-size: 5vmin;
+}
+
+.fmsb-services  h2 {
+  font-size: 3.5vmin;
+}
+
+.fmsb-services  h3 {
+    font-size: 2vmin;
+    line-height: 1.3;
+    font-weight: 200;
+}
+
+#carousel {
+  padding: 0 0; !important;
+}
+
+footer {
+  border-top: 5px solid #c52d2f;
+}
+
+
+#join{
+  background: url(../images/join.jpg) 50% 50% no-repeat;
+  background-size: cover;
+  min-height: 100px;
+}
+
+#join-form {
+  padding: 30px ;
+}
+
+#join-email-input {
+  margin: auto;
+  width: 250px;
+  text-align: center;
+}
