--- a/fmsb/fmsb_site/templates/base.html
+++ b/fmsb/fmsb_site/templates/base.html
@@ -43,7 +43,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="{% static "images/logo.png" %}" alt="logo"></a>
+                    <a class="navbar-brand" href="index.html"><img src="{% static "images/logo.png" %}" class="img-responsive" alt="logo"></a>
                 </div>
 
                 <div class="collapse navbar-collapse navbar-right">
@@ -63,13 +63,8 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                             {%  static_placeholder "Footer" %}
-                </div>
-                <div class="col-sm-6">
-                    <ul class="pull-right">
-                        {% show_menu 0 1 100 100 "menu.html" %}
-                    </ul>
                 </div>
             </div>
         </div>
