--- a/fmsb/fmsb_site/templates/base.html
+++ b/fmsb/fmsb_site/templates/base.html
@@ -16,6 +16,7 @@
     <link href="{% static  "css/main.css" %}" rel="stylesheet">
     <link href="{% static  "css/fmsb.css" %}" rel="stylesheet">
     <link href="{% static  "css/responsive.css" %}" rel="stylesheet">
+    <link href="{% static  "css/formValidation.css" %}" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -43,7 +44,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="{% static "images/logo.png" %}" class="img-responsive" alt="logo"></a>
+                    <a class="navbar-brand" href="{% page_url "home" %}"><img src="{% static "images/logo.png" %}" class="img-responsive" alt="logo"></a>
                 </div>
 
                 <div class="collapse navbar-collapse navbar-right">
@@ -76,6 +77,10 @@
     <script src="{% static "js/jquery.isotope.min.js" %}"></script>
     <script src="{% static "js/main.js" %}"></script>
     <script src="{% static "js/wow.min.js" %}"></script>
-    {% render_block "js" %}
+    <script src="{% static "js/fmsb.js" %}"></script>
+<script src="{% static "js/formValidation/formValidation.js" %}"></script>
+<script src="{% static "js/formValidation/pt_BR.js" %}"></script>
+<script src="{% static "js/formValidation/bootstrap.js" %}"></script>
+{% render_block "js" %}
 </body>
 </html>
